put banner.png back in

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3795,7 +3795,7 @@
 		-webkit-justify-content: center;
 		-ms-justify-content: center;
 		justify-content: center;
-		background-image: url("../../images/.png");
+		background-image: url("../../images/banner.png");
 		background-position: center;
 		background-size: cover;
 		background-repeat: no-repeat;
